--- a/index.html
+++ b/index.html
@@ -5,28 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LitLearner</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    </style>
 </head>
 <body>
-    <div class="header-container">
-        <div class="name">
-            <img class="logo" src="pics/Logo.png">
-            <h1>LitLearner</h1>
+    <nav class="navbar">
+        <div class="container">
+            <div class="name">
+                <img class="logo-pic" src="pics/Logo.png">
+                <div class="logo">LitLearner</div>
+            </div>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">FAQs</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Support</a></li>
+            </ul>  
         </div>
-        <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Community</a></li>
-            <li><a href="#">FAQs</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Support</a></li>
-        </ul>
-    </div>
-    <div class="content-container">
-        <div class="content">
-            <div class="title">Build your language proficiency</div>
-            <div class="text">Where language learning meets efficiency. Our app is your personalized language tutor, helping you enhance your proficiency one word at a time. With powerful tools for reading, vocabulary building, and assessments, we provide a seamless journey towards fluency.</div>
-            <div class="button"><a href="#">Get Started</a></div>
+    </nav>
+    <div class="content">
+        <div class="container">
+            <div class="content">
+                <div class="title">Build your language proficiency</div>
+                <div class="text">Where language learning meets efficiency. Our app is your personalized language tutor, helping you enhance your proficiency one word at a time. With powerful tools for reading, vocabulary building, and assessments, we provide a seamless journey towards fluency.</div>
+                <div class="button"><a href="#">Get Started</a></div>
+            </div>
+            <img class="logo" src="pics/Globe.png">
         </div>
-        <img class="logo" src="pics/Globe.png">
     </div>
 </body>
 </html>
