modify the .title and insert span to enable multi-colored sentence

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             </ul>  
         </div>
     </nav>
-    <div class="content">
+    <div class="section">
         <div class="container">
             <div class="content">
-                <div class="title">Build your language proficiency</div>
+                <div class="title"><span class="title1">Build your language</span> proficiency</div>
                 <div class="text">Where language learning meets efficiency. Our app is your personalized language tutor, helping you enhance your proficiency one word at a time. With powerful tools for reading, vocabulary building, and assessments, we provide a seamless journey towards fluency.</div>
                 <div class="button"><a href="#">Get Started</a></div>
             </div>
