--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="content">
                 <div class="title"><span class="title1">Build your language</span> proficiency</div>
                 <div class="text">Where language learning meets efficiency. Our app is your personalized language tutor, helping you enhance your proficiency one word at a time. With powerful tools for reading, vocabulary building, and assessments, we provide a seamless journey towards fluency.</div>
-                <div class="button"><a href="#">Get Started</a></div>
+                <div class="button"><a href="signup.html">Get Started</a></div>
             </div>
             <img class="logo" src="pics/Globe.png">
         </div>
