create basic form controls

--- a/signup.html
+++ b/signup.html
@@ -25,5 +25,31 @@
             </ul>  
         </div>
     </nav>
+    <div class="signup">
+        <div class="container">
+            <h1>Create Account</h1>
+            <form action="#" method="post">
+                <div class="fullname">
+                    <label for="fullname">Full name</label>
+                    <input type="text" id="fullname" name="fullname" placeholder="Full name">
+                </div>
+                <div class="email">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Email">
+                </div>
+                <div class="password">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Password">
+                </div>
+                <div class="confirm-pass">
+                    <label for="confirm-pass">Confirm Password</label>
+                    <input type="password" id="confirm-pass" name="confirm-pass" placeholder="Confirm Password">
+                </div>
+                <div class="submit">
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
