reverse the order of labels and inputs to enable styling

--- a/signup.html
+++ b/signup.html
@@ -29,21 +29,21 @@
         <div class="container">
             <h1>Create Account</h1>
             <form action="#" method="post">
-                <div class="fullname">
+                <div class="input-group">
+                    <input type="text" id="fullname" name="fullname" placeholder="Full name" required>
                     <label for="fullname">Full name</label>
-                    <input type="text" id="fullname" name="fullname" placeholder="Full name">
                 </div>
-                <div class="email">
+                <div class="input-group">
+                    <input type="email" id="email" name="email" placeholder="Email" required>
                     <label for="email">Email</label>
-                    <input type="email" id="email" name="email" placeholder="Email">
                 </div>
-                <div class="password">
+                <div class="input-group">
+                    <input type="password" id="password" name="password" placeholder="Password" required>
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Password">
                 </div>
-                <div class="confirm-pass">
+                <div class="input-group">
+                    <input type="password" id="confirm-pass" name="confirm-pass" placeholder="Confirm Password" required>
                     <label for="confirm-pass">Confirm Password</label>
-                    <input type="password" id="confirm-pass" name="confirm-pass" placeholder="Confirm Password">
                 </div>
                 <div class="submit">
                     <button type="submit">Submit</button>
