--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
                     <label for="confirm-pass">Confirm Password</label>
                 </div>
                 <div class="submit">
-                    <button type="submit">Submit</button>
+                    <button type="submit">Sign Up</button>
                 </div>
             </form>
         </div>
