--- a/signup.html
+++ b/signup.html
@@ -45,10 +45,20 @@
                     <input type="password" id="confirm-pass" name="confirm-pass" placeholder="Confirm Password" required>
                     <label for="confirm-pass">Confirm Password</label>
                 </div>
-                <div class="submit">
-                    <button type="submit">Sign Up</button>
-                </div>
             </form>
+            <div class="submit">
+                <button type="submit">Sign Up</button>
+            </div>
+            <div class="continue-with">
+                <div class="line"></div>
+                <span class="text">or sign up with</span>
+                <div class="line"></div>
+            </div>
+            <div class="signup-links">
+                <div class="google"><img src="pics/google.png" alt="google"></div>
+                <div class="github"><img src="pics/github.png" alt="github"></div>
+                <div class="facebook"><img src="pics/facebook.png" alt="facebook"></div>
+            </div>
         </div>
     </div>
 </body>
