create login prompt

--- a/signup.html
+++ b/signup.html
@@ -59,6 +59,7 @@
                 <div class="github"><img src="pics/github.png" alt="github"></div>
                 <div class="facebook"><img src="pics/facebook.png" alt="facebook"></div>
             </div>
+            <div class="login-container">Already have an account? <a href="#">Log In</a></div>
         </div>
     </div>
 </body>
