wrap main logo in <a> to redirect in main page when clicked

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <div class="name">
+            <a href="index.html" class="name">
                 <img class="logo-pic" src="pics/Logo.png">
                 <div class="logo">LitLearner</div>
-            </div>
+            </a>
             <ul>
                 <li><a href="#">Community</a></li>
                 <li><a href="#">FAQs</a></li>
