--- a/signup.html
+++ b/signup.html
@@ -55,9 +55,9 @@
                 <div class="line"></div>
             </div>
             <div class="signup-links">
-                <div class="google"><img src="pics/google.png" alt="google"></div>
-                <div class="github"><img src="pics/github.png" alt="github"></div>
-                <div class="facebook"><img src="pics/facebook.png" alt="facebook"></div>
+                <a href="#" class="google"><img src="pics/google.png" alt="google"></a>
+                <a href="#" class="github"><img src="pics/github.png" alt="github"></a>
+                <a href="#" class="facebook"><img src="pics/facebook.png" alt="facebook"></a>
             </div>
             <div class="login-container">Already have an account? <a href="#">Log In</a></div>
         </div>
