--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
             <h1>Create Account</h1>
             <form action="#" method="post">
                 <div class="input-group">
-                    <input type="text" id="fullname" name="fullname" placeholder="Full name" required>
+                    <input type="text" id="fullname" name="fullname" placeholder="Full name" pattern="^[a-z.A-Z ]+$" required>
                     <label for="fullname">Full name</label>
                 </div>
                 <div class="input-group">
@@ -38,17 +38,17 @@
                     <label for="email">Email</label>
                 </div>
                 <div class="input-group">
-                    <input type="password" id="password" name="password" placeholder="Password" required>
+                    <input type="password" id="password" name="password" placeholder="Password" minlength="8" required>
                     <label for="password">Password</label>
                 </div>
                 <div class="input-group">
                     <input type="password" id="confirm-pass" name="confirm-pass" placeholder="Confirm Password" required>
                     <label for="confirm-pass">Confirm Password</label>
                 </div>
+                <div class="submit">
+                    <button type="submit">Sign Up</button>
+                </div>
             </form>
-            <div class="submit">
-                <button type="submit">Sign Up</button>
-            </div>
             <div class="continue-with">
                 <div class="line"></div>
                 <span class="text">or sign up with</span>
